--- a/front/src/index.html
+++ b/front/src/index.html
@@ -16,14 +16,19 @@
       rel="stylesheet"
     />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&amp;display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-S4LTDD9Y1H"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-S4LTDD9Y1H");
+    </script>
     <link rel="manifest" href="manifest.webmanifest" />
     <meta name="theme-color" content="#fcfbfb" />
   </head>
