--- a/front/src/index.html
+++ b/front/src/index.html
@@ -16,6 +16,7 @@
       rel="stylesheet"
     />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="manifest" href="manifest.webmanifest" />
   </head>
   <body class="mat-typography">
     <app-root></app-root>
