LightHouseで指摘されている部分を修正

--- a/front/src/index.html
+++ b/front/src/index.html
@@ -6,6 +6,7 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="assets/icons/icon-64x64.png" />
+    <link rel="apple-touch-icon" href="assets/icons/icon-64x64.png" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&amp;display=swap"
@@ -16,6 +17,7 @@
       rel="stylesheet"
     />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <meta name="theme-color" content="#fcfbfb" />
     <link rel="manifest" href="manifest.webmanifest" />
   </head>
   <body class="mat-typography">
