アドセンス追加

--- a/front/src/index.html
+++ b/front/src/index.html
@@ -19,6 +19,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <meta name="theme-color" content="#fcfbfb" />
     <link rel="manifest" href="manifest.webmanifest" />
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6508130522073832"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body class="mat-typography">
     <app-root></app-root>
