背景色を修正する

--- a/front/src/index.html
+++ b/front/src/index.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
     />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <meta name="theme-color" content="#fcfbfb" />
+    <meta name="theme-color" content="#e8eaed" />
     <link rel="manifest" href="manifest.webmanifest" />
     <script
       async
