ダークモード対応

--- a/front/src/index.html
+++ b/front/src/index.html
@@ -18,6 +18,7 @@
     />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <meta name="theme-color" content="#e8eaed" />
+    <meta name="color-scheme" content="light dark" />
     <link rel="manifest" href="manifest.webmanifest" />
     <script
       async
