--- a/front/src/index.html
+++ b/front/src/index.html
@@ -20,6 +20,20 @@
     <meta name="theme-color" content="#e8eaed" />
     <meta name="color-scheme" content="light dark" />
     <link rel="manifest" href="manifest.webmanifest" />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-S4LTDD9Y1H"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-S4LTDD9Y1H");
+    </script>
   </head>
   <body class="mat-typography">
     <app-root></app-root>
