--- a/front/src/index.html
+++ b/front/src/index.html
@@ -3,6 +3,21 @@
   <head>
     <meta charset="utf-8" />
     <title>Moment</title>
+    <meta
+      name="description"
+      content="簡単で無料で使える単語帳アプリ。自分で作った単語帳を使って英語を勉強することができます。"
+    />
+    <link rel="canonical" href="https://moment.ninja/" />
+    <meta property="og:url" content="https://moment.ninja/" />
+    <meta property="og:title" content="Moment" />
+    <meta
+      property="og:description"
+      content="自作の単語帳で簡単に英語を勉強できる！"
+    />
+    <meta property="og:image" content="assets/icons/icon-64x64.png" />
+    <meta property="og:site_name" content="Moment" />
+    <meta property="og:locale" content="ja_JP" />
+
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="assets/icons/icon-64x64.png" />
